swaggerdocs feel
not sure about the functionality of the swagger docs, but apart from that the look is pretty well perfect (except for the colours but ¯\_(ツ)_/¯)
